--- a/DaQL/DaQL-X-PDF/document.tex
+++ b/DaQL/DaQL-X-PDF/document.tex
@@ -51,11 +51,12 @@ Prefix length = $|T1| - (\lceil 0.25 * |T1| \rceil ) + 1 = 2$
 
 
 \subsubsection*{T2: Mayday, mayday (mayday\textvisiblespace mayday)}
-T2 = [\textvisiblespace mayd, ay\textvisiblespace ma, ayday, day\textvisiblespace m, mayda, y\textvisiblespace may, yday\textvisiblespace ]
+T2 = [\textvisiblespace mayd, ay\textvisiblespace ma, ayday,
+day\textvisiblespace m, mayda, y\textvisiblespace may, yday\textvisiblespace ]\\
 Prefix length = $|T2| - (\lceil 0.25 * |T2| \rceil ) + 1 = 6$
 
 \subsubsection*{T3: Day of may (day\textvisiblespace may)}
-T3 = [ay\textvisiblespace ma, day\textvisiblespace m, y\textvisiblespace may]
+T3 = [ay\textvisiblespace ma, day\textvisiblespace m, y\textvisiblespace may]\\
 Prefix length = $|T3| - (\lceil 0.25 * |T3| \rceil ) + 1 = 3$
 
 
@@ -97,17 +98,109 @@ $SIM(Q2, T3) = \frac{1*1}{|| T3 || * || Q2 ||} \approx 0.169 $\\
 Ranking for Query2: T2 \textgreater T1 \textgreater T3\\
 
 \subsection*{c) cosine distance}
-
+The cosine similarity is the cosine of the angle between two vectors.\\
+The cosine is 1 for orthogonal vectors $\rightarrow$ distance is 1, meaning
+completly different vectors.\\
+The cosine is 0 for parallel vectors $\rightarrow$ distance is 0, meaning
+completly similar vectors.\\
+\\
+$ \Sigma{_k} v_i[k] * v_j[k] $ is the dot product of $v_i$ and $v_j$
+$\Rightarrow v_i \times v_j = ||v_i|| * ||v_j|| * cos(v_i,v_j) $
 
 \vspace{2cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Exercise 3}
 \subsection*{a) Graph A}
+\[
+M_A   =
+\left[   {\begin{array}{cccccc}
+0   &   0   &   0   &  1/2  &   0   &   0   \\
+1   &   0   &   0   &   0   &  1/2  &   0   \\
+0   &   1   &   0   &   0   &  1/2  &   1   \\
+0   &   0   &   1   &   0   &   0   &   0   \\
+0   &   0   &   0   &   0   &   0   &   0   \\
+0   &   0   &   0   &  1/2  &   0   &   0   \\
+\end{array}   }   \right]
+\]
+\[
+V_0   =
+\left[   {\begin{array}{c}
+1/6\\
+1/6\\
+1/6\\
+1/6\\
+1/6\\
+1/6\\
+\end{array}   }   \right],
+V_1   =
+\left[   {\begin{array}{c}
+1/12\\
+1/4\\
+5/12\\
+1/6\\
+0\\
+1/12\\
+\end{array}   }   \right],
+V_2   =
+\left[   {\begin{array}{c}
+1/12\\
+1/12\\
+1/3\\
+5/12\\
+0\\
+5/24\\
+\end{array}   }   \right],
+V_3   =
+\left[   {\begin{array}{c}
+5/24\\
+1/12\\
+7/24\\
+1/3\\
+0\\
+1/6\\
+\end{array}   }   \right]
+\]
+\\
+$diff(V_0,V_1) \approx 0.667 $\\
+$diff(V_1,V_2) = 0.625 $\\
+$diff(V_2,V_3) = 0.25 $\\
+
 
 \subsection*{b) Graph B}
-
-
+\[
+M_B   =
+\left[   {\begin{array}{ccccccc}
+0   &   0   &   0   &  1/3  &   0   &   0   &  0   \\
+1   &   0   &   0   &   0   &  1/2  &   0   &  0     \\
+0   &   1   &   0   &   0   &  1/2  &   1   &  0    \\
+0   &   0   &   1   &   0   &   0   &   0   &  0     \\
+0   &   0   &   0   &   0   &   0   &   0   &  0    \\
+0   &   0   &   0   &  1/3  &   0   &   0   &  0    \\
+0   &   0   &   0   &  1/3  &   0   &   0   &  1    \\
+\end{array}   }   \right]
+\]
+\[
+V_0   =
+\left[   {\begin{array}{c}
+1/7\\
+1/7\\
+1/7\\
+1/7\\
+1/7\\
+1/7\\
+\end{array}   }   \right],
+V_1 \approx
+\left[   {\begin{array}{c}
+0.07 \\
+0.2\\
+0.31\\
+0.14\\
+0.03\\
+0.07\\
+0.18\\
+\end{array}   }   \right]
+\]
 
 
 \vspace{2cm}
@@ -117,6 +210,21 @@ Ranking for Query2: T2 \textgreater T1 \textgreater T3\\
 \subsection*{a) see code}
 \subsection*{b) fingerprint}
 
+\begin{tabular}{ l | c | l | l |}
+& Distance [0,128] & Article 1 & Article 2  \\
+  \hline          
+Top 1 & 34 & Otis   Redding & Little   Richard\\
+Top 2 & 36 & Otis   Redding & Al   Green\\
+Top 3 & 37 & Marie   Curie & Ray   Charles\\
+Top 4 & 38 & Niels   Bohr & Elvis   Presley\\
+Top 5 & 39 & Tina   Turner & Al   Green\\
+Top 6 & 40 & Stephen   Hawking & John   Lennon\\
+Top 7 & 41 & Otis   Redding & Ray   Charles\\
+Top 8 & 42 & Tim   Berners-Lee & Guglielmo   Marconi\\
+Top 9 & 43 & Stephen   Hawking & Marie   Curie\\
+Top 10 & 44 & Otis   Redding & Roy   Orbison    \\       
+  \hline  
+\end{tabular}
 
 
 \end{document}
