--- a/DaQL/DaQL-X-PDF/document.tex
+++ b/DaQL/DaQL-X-PDF/document.tex
@@ -9,7 +9,7 @@
  
 \pagestyle{fancy}
 \fancyhf{}
-\lhead{Exercise Sheet 3}
+\lhead{Exercise Sheet 5}
 \rhead{Tim Schmiedl}
 \rfoot{Page \thepage}
 
@@ -22,7 +22,7 @@
 
 \begin{document}
 \title{Data Analysis and Query Languages \\
- Exercise Sheet 4}
+ Exercise Sheet 5}
 \date{\today}
 \author{Tim Schmiedl} 
 \maketitle
@@ -30,157 +30,79 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Exercise 1}
-\subsection*{a)}
-\subsubsection*{Query}
-\begin{lstlisting}
-PREFIX foaf:<http://xmlns.com/foaf/0.1/>
-PREFIX movies:<http://example.org/movies#>
-PREFIX xsd:<http://www.w3.org/2001/XMLSchema#>
 
-select ?user ?genre (AVG(?ratingValue) AS ?genre_rating)
-where{
-	?user 		movies:hasRated 	?rating.
-	?rating 	movies:hasRating	?ratingValue.
-	?rating 	movies:ratedMovie	?movie.
-	?movie		movies:hasGenre		?genre.
-}
-group by ?user ?genre
-\end{lstlisting}
-\subsubsection*{Result}
-\begin{lstlisting}
-user			genre		genre_rating
-movies:Bob 		"sci-fi" 	"4.0"^^xsd:float
-movies:Bob 		"drama" 	"4.0"^^xsd:float
-movies:Bob 		"thriller" 	"9.0"^^xsd:float
-movies:Bob 		"action" 	"9.0"^^xsd:float
-movies:Alice 		"drama" 	"4.0"^^xsd:float
-movies:Alice 		"sci-fi" 	"4.0"^^xsd:float
-movies:Alice 		"thriller" 	"8.75"^^xsd:float
-movies:Alice 		"action" 	"8.75"^^xsd:float
-\end{lstlisting}
-
-\vspace{1cm}
-\newpage
-\subsection*{b)}
-\subsubsection*{Query}
-\begin{lstlisting}
-PREFIX foaf:<http://xmlns.com/foaf/0.1/>
-PREFIX movies:<http://example.org/movies#>
-PREFIX xsd:<http://www.w3.org/2001/XMLSchema#>
-
-
-select distinct ?user2
-{
-    
-    {
-        select ?user1 (AVG(?ratingValue) AS ?rating1) ?genre
-        where{
-            ?user1      movies:hasRated         ?rating.
-            ?rating     movies:hasRating        ?ratingValue.
-            ?rating     movies:ratedMovie       ?movie.
-            ?movie      movies:hasGenre         ?genre.
-            filter(?user1 = movies:Bob)
-        }
-        group by ?user1 ?genre
-    }
-    {
-        select ?user2 (AVG(?ratingValue) AS ?rating2) ?genre
-        where{
-            ?user2      movies:hasRated         ?rating.
-            ?rating     movies:hasRating        ?ratingValue.
-            ?rating     movies:ratedMovie       ?movie.
-            ?movie      movies:hasGenre         ?genre.
-            filter(?user2 != movies:Bob)
-        }
-        group by ?user2 ?genre
-    }
-    filter(abs(?rating1-?rating2) < 1)
-}
-\end{lstlisting}
-\subsubsection*{Query}
-\begin{lstlisting}
-movies:Alice
-\end{lstlisting}
-
+$(R\bowtie^{1,2,3'}_{3=1'})^*$:\\
+\\
+\begin{tabular}{c|c|c}
+1 & 2 & 3'\\
+\hline
+St. Andrews & Bus Op 1 & London\\
+\hline
+St. Andrews & Bus Op 1 & Brussels\\
+\hline
+Edinburgh & Train Op 1 & Brussels\\
+\hline
+Train Op 1 & part\_of & NatExpress
+\end{tabular}\\
+\\
+\\
+$(\bowtie^{1',2,3}_{1=2'}R)^*$:\\
+\\
+\begin{tabular}{c|c|c}
+1' & 2 & 3\\
+\hline
+St. Andrews & part\_of & NatExpress\\
+\hline
+Edinburgh & part\_of & EastCost\\
+\hline
+London & part\_of & Eurostar\\
+\end{tabular}\\
+\\
+\\
+Reach $_{\to}$ defined by Left Kleene Closure: $(\bowtie^{1',2,3}_{3'=1}R)^*$\\
 
 \vspace{2cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Exercise 2}
+
+
+
+\vspace{2cm}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Exercise 3}
 \subsection*{a)}
-\subsubsection*{Result}
-$[[(next :: TGV | next :: Seafrance)^+)]]_G \\
-= (([[next :: TGV ]]_G \cup [[next :: Seafrance]]_G) \cup ([[next :: TGV ]]_G
-\cup ...)\\\\
-= \{(Paris,Calais),(Paris,Dijon),(Paris,Dover),(Calais,Dover)\}
-\\\\
-?y = Dover
-\\
-\Rightarrow \{?x = Paris, ?x = Calais\}
-$
+Best Values
+\begin{lstlisting}
+CosineSimilarity=true
+MinSimilarity=0.5
+MinOverlap=10
+MinNeighbors=10
+Neighbors=25
 
-\vspace{1cm}
+Metric      Result
+------------------
+MAE        | 0,799 
+Precision  | 0,306 
+RMSE       | 1,019 
+Recall     |  0,56 
+\end{lstlisting}
+
 \subsection*{b)}
-Same as in a) but with additional OPT-clause.\\\\
-$
-[[(next :: TGV | next :: Seafrance)^+)]]_G  \\
-= \{(Paris,Calais),(Paris,Dijon),(Paris,Dover),(Calais,Dover)\} \\\\
-$
-$
-[[(next :: country ))]]_G  \\
-= \{(Paris,France)\} \\\\
-$
-$
-\Rightarrow
-\{(?x = Paris,  ?y = France),(?x = Calais)\}
-$
-
-
-\vspace{1cm}
-\subsection*{c)}
-\subsubsection*{Description}
-Nodes must be connected by the following conditions:\\
-\begin{itemize}
-  \item From start node \textbf{X} use one of \{Seafrance, NExpress\} at least
-  on time
-  \item the next node must reach London by NExpress (middle node \textbf{Z})
-  \item from this node \textbf{Z} use at least one of \{Seafrance, NExpress\} to
-  get to node \textbf{Y}
-\end{itemize}
-\subsubsection*{Result}
-$\{(?x = Calais, ?y = Hastings),(?x = Calais, ?y = London)\}$
-
-\vspace{1cm}
-\subsection*{d)}
-\subsubsection*{Description}
-All nodes that are connected via a (sub)-property of transport.
-\subsubsection*{Result}
-$\{(?x = Paris, ?y = Calais), (?x = Paris, ?y = Dijon), (?x = Paris, ?y =Dover), 
- (?x = Paris, ?y = Hastings), (?x = Paris, ?y = London), (?x = Calais, ?y = Dover), 
-(?x = Calais, ?y = Hastings), (?x = Calais, ?y = London), \\
-(?x = Dover, ?y = Hastings), (?x = Dover, ?y = London)\}$
-
-\vspace{1cm}
-\subsection*{e)}
-$P_5' = (?x, (trans(ferry)|trans(train))^+ / self :: [trans(type) / self
-::costal_city]^+ , ?y)$
-
-\vspace{1cm}
-\subsection*{f)}
-Example for trans(city):\\
-$tans(city)  \{?x = Hastings\}$\\
+u: user with the rating to predict\\
+i: neighbors of user u\\
+maxN: maximum of neighbors to consider \\
 \\
-Path:
-$Hastings \overset{type}{\rightarrow} coastal_city \overset{sc}{\rightarrow}
-city$
+sim(u, i): similarity between u and i\\
+avg(u): average rating of user u\\
+rating(u): rating for user u\\
+\\
+$
+rating(u) = avg(u) + \frac{\sum\limits_{i=0}^{maxN} (rating(i) - avg(i)) *
+sim(u, i)} {\sum\limits_{i=0}^{maxN} |sim(u, i) | }
+$
 
-\vspace{1cm}
-\subsection*{g)}
-Example for trans(city):\\
-$tans(city) = \{?x = Paris,?x = Calais, ?x = Dijon, ?x = Dover\}$\\\\
-Example path for Paris:
-$Paris \overset{edge}{\rightarrow} TGV \overset{sc}{\rightarrow} train
-\overset{sc}{\rightarrow} transport \overset{dom}{\rightarrow} city$
-
+\subsection*{c)}
 
 \end{document}
