--- a/DaQL/DaQL-X-PDF/document.tex
+++ b/DaQL/DaQL-X-PDF/document.tex
@@ -33,7 +33,8 @@
 
 $(R\bowtie^{1,2,3'}_{3=1'})^*$:\\
 \\
-\begin{tabular}{c|c|c}
+\begin{tabular}{|c|c|c|}
+\hline
 1 & 2 & 3'\\
 \hline
 St. Andrews & Bus Op 1 & London\\
@@ -42,13 +43,15 @@ St. Andrews & Bus Op 1 & Brussels\\
 \hline
 Edinburgh & Train Op 1 & Brussels\\
 \hline
-Train Op 1 & part\_of & NatExpress
+Train Op 1 & part\_of & NatExpress\\
+\hline
 \end{tabular}\\
 \\
 \\
 $(\bowtie^{1',2,3}_{1=2'}R)^*$:\\
 \\
-\begin{tabular}{c|c|c}
+\begin{tabular}{|c|c|c|}
+\hline
 1' & 2 & 3\\
 \hline
 St. Andrews & part\_of & NatExpress\\
@@ -56,6 +59,7 @@ St. Andrews & part\_of & NatExpress\\
 Edinburgh & part\_of & EastCost\\
 \hline
 London & part\_of & Eurostar\\
+\hline
 \end{tabular}\\
 \\
 \\
@@ -73,21 +77,11 @@ Reach $_{\to}$ defined by Left Kleene Closure: $(\bowtie^{1',2,3}_{3'=1}R)^*$\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Exercise 3}
 \subsection*{a)}
-Best Values
-\begin{lstlisting}
-CosineSimilarity=true
-MinSimilarity=0.5
-MinOverlap=10
-MinNeighbors=10
-Neighbors=25
-
-Metric      Result
-------------------
-MAE        | 0,799 
-Precision  | 0,306 
-RMSE       | 1,019 
-Recall     |  0,56 
-\end{lstlisting}
+For evaluation results see \textbf{I, II, III} in excercise \textbf{c)}.\\\\
+Generally speaking the values for MAE and RMSE seems to improve for higher
+\textit{MinSimilarity}. This seems to be logical as now only more similar
+items/users are considered.\\
+Also Pearson-correlation seems to work better than cosine similarity.
 
 \subsection*{b)}
 u: user with the rating to predict\\
@@ -104,5 +98,44 @@ sim(u, i)} {\sum\limits_{i=0}^{maxN} |sim(u, i) | }
 $
 
 \subsection*{c)}
-
+Changes see code.\\
+\\
+Generally the item based approach seems to work a little better, especially for
+MAE and RMSE. Therefore see the following evaluation results.
+\vspace{1cm}\\
+\paragraph{I)}
+Cosine=true, MinSim=0.8, MinOverlap=3, MinNeighbors=3, Neighbors=25\\
+\begin{tabular}{| l | l | l | l |}
+  \hline          
+& UserBased & ItemBased  \\\hline
+MAE & 0.801 & 0.792 \\
+RMSE & 1.018 & 1.0 \\
+Precision & 0.303 & 0.313 \\
+Recall & 0.688 & 0.685 \\
+  \hline  
+\end{tabular}
+\vspace{1cm}\\
+\paragraph{II)}
+Cosine=false, MinSim=0.2, MinOverlap=5, MinNeighbors=5, Neighbors=25\\
+\begin{tabular}{| l | l | l | l |}
+  \hline          
+& UserBased & ItemBased  \\\hline
+MAE & 0.795 & 0.754 \\
+RMSE & 1.024 & 0.969 \\
+Precision & 0.349 & 0.354 \\
+Recall & 0.666 & 0.624 \\
+  \hline  
+\end{tabular}
+\vspace{1cm}\\
+\paragraph{III)}
+Cosine=false, MinSim=0.9, MinOverlap=5, MinNeighbors=5, Neighbors=25\\
+\begin{tabular}{| l | l | l | l |}
+  \hline          
+& UserBased & ItemBased  \\\hline
+MAE & 0.177 & 0.71 \\
+RMSE & 0.228 & 0.978 \\
+Precision & 0.04 & 0.105 \\
+Recall & 0.002 & 0.018 \\
+  \hline  
+\end{tabular}
 \end{document}
