--- a/DaQL/DaQL-X-PDF/document.tex
+++ b/DaQL/DaQL-X-PDF/document.tex
@@ -6,10 +6,16 @@
 \usepackage{amsmath}
 \usepackage{listings}
 \usepackage{graphicx}
+\usepackage{pdflscape}
+ 
+\usepackage{fancyhdr}
+\usepackage{mathrsfs}
+\usepackage{amsfonts}
+\usepackage{listings}
  
 \pagestyle{fancy}
 \fancyhf{}
-\lhead{Exercise Sheet 5}
+\lhead{Exercise Sheet 6}
 \rhead{Tim Schmiedl}
 \rfoot{Page \thepage}
 
@@ -22,120 +28,90 @@
 
 \begin{document}
 \title{Data Analysis and Query Languages \\
- Exercise Sheet 5}
+ Exercise Sheet 6}
 \date{\today}
 \author{Tim Schmiedl} 
 \maketitle
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section*{Exercise 1}
-
-$(R\bowtie^{1,2,3'}_{3=1'})^*$:\\
+\subsubsection*{a) Computing user profiles}
+\textbf{u0:} $I_{rel}=\{m1,m6,m9\}$, $I_{non\_rel}=\{m4,m8\}$\\
 \\
-\begin{tabular}{|c|c|c|}
-\hline
-1 & 2 & 3'\\
-\hline
-St. Andrews & Bus Op 1 & London\\
-\hline
-St. Andrews & Bus Op 1 & Brussels\\
-\hline
-Edinburgh & Train Op 1 & Brussels\\
-\hline
-Train Op 1 & part\_of & NatExpress\\
-\hline
-\end{tabular}\\
+$P_u=1.0*[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\\
+. \;\;\;\: + 0.2*[3, 2, 1, 0, 1, 1, 0, 1, 0, 0, 0]\\
+. \;\;\;\: - 0.9*[0, 0, 0, 1, 0, 0, 0, 2, 1, 1, 0]\\
 \\
+. \;\;\;\: =[0.6, 0.4, 0.2, -0.9, 0.2, 0.2, 0.0, -1.6, -0.9, -0.9, 0.0]$\\
+\vspace{1.5cm}
 \\
-$(\bowtie^{1',2,3}_{1=2'}R)^*$:\\
+\textbf{u1:} $I_{rel}=\{m1,m2,m5,m7,m8\}$, $I_{non\_rel}=\{\}$\\
 \\
-\begin{tabular}{|c|c|c|}
-\hline
-1' & 2 & 3\\
-\hline
-St. Andrews & part\_of & NatExpress\\
-\hline
-Edinburgh & part\_of & EastCost\\
-\hline
-London & part\_of & Eurostar\\
-\hline
-\end{tabular}\\
+$P_u=1.0*[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\\
+. \;\;\;\: +0.2*[3, 2, 0, 1, 1, 1, 2, 1, 0, 1, 1]\\
+. \;\;\;\: -0.9*[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\\
 \\
+. \;\;\;\: =[0.6, 0.4, 0.0, 0.2, 0.2, 0.2, 0.4, 0.2, 0.0, 0.2, 0.2]$\\
 \\
-Reach $_{\to}$ defined by Left Kleene Closure: $(\bowtie^{1',2,3}_{3'=1}R)^*$\\
-
-\vspace{2cm}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{3cm}
+\subsubsection*{b) Top 3 Movies }
+$sim(P_{u0},m0)=\;\;\:0.2919$\\
+$sim(P_{u0},m2)=-0.0243$\\
+$sim(P_{u0},m3)=\;\;\:0.1192$\\
+$sim(P_{u0},m5)=-0.1216$\\
+$sim(P_{u0},m7)=\;\;\:0.1459$\\
+$\Rightarrow$ u0 should watch m0, m7 and m3.\\
+\\
+$sim(P_{u1},m0)=\;\;\:0.6019$\\
+$sim(P_{u1},m3)=\;\;\:0.5897$\\
+$sim(P_{u1},m4)=\;\;\:0.2407$\\
+$sim(P_{u1},m6)=\;\;\:0.6019$\\
+$sim(P_{u1},m9)=\;\;\:0.6019$\\
+$\Rightarrow$ u1 should watch m0, m6 and m9.\\
+\newpage
+\begin{landscape}
 \section*{Exercise 2}
+\subsubsection*{a) Octave svd (A)} 	
+\begin{lstlisting}[frame=single,basicstyle=\scriptsize]
+octave:2> [U,S,V]=svd(A)
+U =
+  -3.17e-01  -1.05e-02  -4.95e-01  -1.52e-01  -2.73e-01  -4.74e-01   9.95e-02  -2.36e-01   3.64e-01  -3.62e-01
+  -3.50e-01   2.47e-03   1.53e-01  -6.91e-01  -1.27e-01   3.94e-01   1.20e-01  -1.33e-01   2.44e-01   3.34e-01
+  -2.60e-01   8.15e-01   2.94e-01   2.45e-01   1.79e-01  -7.14e-02   3.39e-02  -1.04e-01   2.65e-01  -1.82e-04
+  -2.99e-01  -2.06e-01   2.80e-01   3.54e-01  -3.06e-01   4.14e-01   3.95e-01  -1.67e-01  -9.50e-02  -4.52e-01
+  -3.10e-01   8.53e-02  -6.50e-01   1.71e-01   3.72e-01   3.98e-01   2.05e-01   3.05e-01  -5.50e-02   8.64e-02
+  -2.86e-01  -1.59e-01   2.47e-01  -3.18e-01   6.47e-01  -2.84e-01   1.52e-01  -3.01e-02  -3.18e-01  -3.22e-01
+  -3.31e-01  -3.50e-01   2.71e-01   2.42e-01  -3.02e-02  -3.11e-01   1.20e-01   5.48e-01   3.63e-01   2.98e-01
+  -3.57e-01   1.73e-01   3.33e-02  -1.52e-01  -3.06e-01   6.60e-02  -5.83e-01   4.52e-01  -3.02e-01  -2.87e-01
+  -2.97e-01  -3.19e-01  -4.11e-03   2.80e-01   2.62e-01   1.41e-01  -6.17e-01  -4.61e-01   1.95e-01   1.01e-01
+  -3.39e-01   6.00e-02  -7.72e-02   1.46e-01  -2.44e-01  -2.85e-01   1.27e-01  -2.74e-01  -6.01e-01   5.08e-01
 
+S =
+   33.94       0       0       0       0       0       0       0       0       0
+       0    5.60       0       0       0       0       0       0       0       0
+       0       0    4.86       0       0       0       0       0       0       0
+       0       0       0    3.88       0       0       0       0       0       0
+       0       0       0       0    3.26       0       0       0       0       0
+       0       0       0       0       0    2.42       0       0       0       0
+       0       0       0       0       0       0    1.90       0       0       0
+       0       0       0       0       0       0       0    1.48       0       0
+       0       0       0       0       0       0       0       0    0.98       0
+       0       0       0       0       0       0       0       0       0    0.27
 
+V =
+  -3.54e-01   3.08e-01   7.75e-02  -1.20e-01   5.87e-01  -5.72e-01   7.28e-02   2.10e-01   1.92e-01   8.99e-03
+  -3.39e-01  -2.46e-01  -1.14e-01  -4.40e-01  -1.75e-01   5.64e-02  -1.74e-01   5.72e-01  -3.00e-01  -3.66e-01
+  -2.67e-01  -3.01e-01   3.01e-01  -5.64e-01  -9.82e-04  -5.93e-02   3.85e-02  -6.48e-01   3.79e-02  -3.68e-02
+  -2.54e-01  -7.05e-03  -3.63e-01   1.23e-01   4.38e-01   4.51e-01   4.90e-01  -1.77e-01  -2.06e-01  -2.76e-01
+  -2.78e-01  -1.77e-01   7.30e-01   3.95e-01  -1.08e-01   1.29e-01   3.07e-01   2.13e-01   1.00e-01  -1.49e-01
+  -3.85e-01   8.82e-02  -4.68e-02   4.72e-01  -4.16e-02  -1.50e-01  -5.72e-01  -3.33e-01  -2.59e-01  -2.95e-01
+  -3.29e-01   1.40e-01  -2.40e-01   7.45e-02  -5.45e-01  -3.74e-01   4.82e-01  -7.21e-02  -2.50e-01   2.62e-01
+  -2.39e-01   6.93e-01   3.05e-02  -2.08e-01  -2.90e-01   3.82e-01  -6.51e-02  -3.52e-02   3.96e-01  -1.54e-01
+  -2.98e-01   9.87e-02   1.64e-01  -5.35e-02   1.83e-01   3.59e-01  -2.18e-01   9.22e-02  -3.50e-01   7.26e-01
+  -3.76e-01  -4.50e-01  -3.69e-01   1.61e-01  -5.08e-02   8.06e-02  -1.19e-01   6.20e-02   6.38e-01   2.39e-01
+\end{lstlisting}
+\end{landscape}
 
-\vspace{2cm}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Exercise 3}
-\subsection*{a)}
-For evaluation results see \textbf{I, II, III} in excercise \textbf{c)}.\\\\
-Generally speaking the values for MAE and RMSE seems to improve for higher
-\textit{MinSimilarity}. This seems to be logical as now only more similar
-items/users are considered.\\
-Also Pearson-correlation seems to work better than cosine similarity.
-
-\subsection*{b)}
-u: user with the rating to predict\\
-i: neighbors of user u\\
-maxN: maximum of neighbors to consider \\
-\\
-sim(u, i): similarity between u and i\\
-avg(u): average rating of user u\\
-rating(u): rating for user u\\
-\\
-$
-rating(u) = avg(u) + \frac{\sum\limits_{i=0}^{maxN} (rating(i) - avg(i)) *
-sim(u, i)} {\sum\limits_{i=0}^{maxN} |sim(u, i) | }
-$
-
-\subsection*{c)}
-Changes see code.\\
-\\
-Generally the item based approach seems to work a little better, especially for
-MAE and RMSE. Therefore see the following evaluation results.
-\vspace{1cm}\\
-\paragraph{I)}
-Cosine=true, MinSim=0.8, MinOverlap=3, MinNeighbors=3, Neighbors=25\\
-\begin{tabular}{| l | l | l | l |}
-  \hline          
-& UserBased & ItemBased  \\\hline
-MAE & 0.801 & 0.792 \\
-RMSE & 1.018 & 1.0 \\
-Precision & 0.303 & 0.313 \\
-Recall & 0.688 & 0.685 \\
-  \hline  
-\end{tabular}
-\vspace{1cm}\\
-\paragraph{II)}
-Cosine=false, MinSim=0.2, MinOverlap=5, MinNeighbors=5, Neighbors=25\\
-\begin{tabular}{| l | l | l | l |}
-  \hline          
-& UserBased & ItemBased  \\\hline
-MAE & 0.795 & 0.754 \\
-RMSE & 1.024 & 0.969 \\
-Precision & 0.349 & 0.354 \\
-Recall & 0.666 & 0.624 \\
-  \hline  
-\end{tabular}
-\vspace{1cm}\\
-\paragraph{III)}
-Cosine=false, MinSim=0.9, MinOverlap=5, MinNeighbors=5, Neighbors=25\\
-\begin{tabular}{| l | l | l | l |}
-  \hline          
-& UserBased & ItemBased  \\\hline
-MAE & 0.177 & 0.71 \\
-RMSE & 0.228 & 0.978 \\
-Precision & 0.04 & 0.105 \\
-Recall & 0.002 & 0.018 \\
-  \hline  
-\end{tabular}
 \end{document}
